feat: grafna & prometheus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,15 @@ services:
   geth:
     container_name: geth
     build: geth
-    command: '--identity ${GETH_NODE} --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0,1 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8544" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0'
+    command: --rinkeby --syncmode fast --datadir=./root/.ethereum/rinkeby --metrics --metrics.expensive --pprof --pprofaddr=0.0.0.0
     # --fast --mine'
-    ports:    
+    ports:
       - "8544:8544"
+      - "6060:6060"
       - "30303:30303"
       - "30303:30303/udp"
     volumes: # blockchain + wallet will be stored here on your host
-      - geth:/root/.ethereum
-
+      - ./geth/.ethereum:/root/.ethereum
   truffle:
     container_name: truffle
     build: truffle
@@ -42,20 +42,20 @@ services:
       - "8545:8545"
     command: '--debug --account="0xaa73b5c98e60d589e71ce7cff59c02f82e12c7ce676ee356da8e058a285ccd61,12345678901234567891234567890123456789123" --account="0x52f3a1fa15405e1d5a68d7774ca45c7a3c7373a66c3c44db94a7f99a22c14d28,12345678901234567891234567890123456789123"'
 
-  netstatsapi: # Collect geth data and send them to remote dashboard (netstatsfront)
-    container_name: netstatsapi
-    image: enettet/ethereum-netstats-api
-    environment:
-      - WS_SERVER=ws://factory.shinit.net:15000
-      #- WS_SERVER=netstatsfront:3000 
-      - WS_SECRET=20170420devchain
-      - RPC_HOST=geth
-      - RPC_PORT=8544
-      - INSTANCE_NAME=${GETH_NODE}_node
-      - CONTACT_DETAILS=
-      - NODE_ENV=private
-      - LISTENING_PORT=30303
-      - VERBOSITY=3
+  # netstatsapi: # Collect geth data and send them to remote dashboard (netstatsfront)
+  #   container_name: netstatsapi
+  #   image: enettet/ethereum-netstats-api
+  #   environment:
+  #    #- WS_SERVER=ws://factory.shinit.net:15000
+  #     - WS_SERVER=netstatsfront:3000 
+  #     - WS_SECRET=20170420devchain
+  #     - RPC_HOST=geth
+  #     - RPC_PORT=8545
+  #     - INSTANCE_NAME=${GETH_NODE}_node
+  #     - CONTACT_DETAILS=
+  #     - NODE_ENV=private
+  #     - LISTENING_PORT=30303
+  #     - VERBOSITY=5
 
   # netstatsfront: # To display our dashboard locally (in our case, dashboard is already running on http://factory.shinit.net:15000)
   #   container_name: netstatsfront
@@ -64,7 +64,23 @@ services:
   #     - WS_SECRET=20170420devchain
   #     - NODE_ENV=private
   #   ports:
-  #     - 3000:3000 
+  #     - 3000:3000
 
-volumes:
-  geth:
+  prometheus:
+    image: prom/prometheus
+    depends_on:
+      geth:
+        condition: service_started
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - "9000:3000"
+    depends_on:
+      prometheus:
+        condition: service_started
+    volumes:
+      - ./grafana/grafana.db:/var/lib/grafana/grafana.db
