--- a/truffle/Dockerfile
+++ b/truffle/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:8.0.0-alpine
+FROM node:alpine
 
 RUN apk add -t .gyp --no-cache git python g++ make \
     && npm install -g truffle \
@@ -6,6 +6,6 @@ RUN apk add -t .gyp --no-cache git python g++ make \
 
 RUN mkdir -p /dapp
 WORKDIR /dapp
-
+RUN ls -ltra /root/.config/
 EXPOSE 8080
 ENTRYPOINT []
